[gd_scene load_steps=2 format=3 uid="uid://bxkl7juw5asmf"]

[ext_resource type="Script" path="res://src/views/UnifiedMenu.gd" id="1_3n4wp"]

[node name="UnifiedMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_3n4wp")

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0

[node name="ResumeButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Continuar"

[node name="SaveButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Guardar"

[node name="SaveAndExitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Guardar y Salir"

[node name="CloseButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Cerrar"
